--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -4,14 +4,14 @@ hyperskill_project:
   is_template_based: false
   use_ide: true
   environment: unittest
-update_date: "Thu, 01 Jan 1970 00:00:00 UTC"
+update_date: "Sat, 23 Nov 2024 14:39:51 UTC"
 stages:
   - id: 680
     step: 10888
     is_completed: true
   - id: 681
     step: 10889
-    is_completed: false
+    is_completed: true
   - id: 682
     step: 10890
     is_completed: false
