--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -14,7 +14,7 @@ stages:
     is_completed: true
   - id: 682
     step: 10890
-    is_completed: false
+    is_completed: true
   - id: 683
     step: 10891
     is_completed: false
