--- a/Easy Rider Bus Company/Special stops/task-info.yaml
+++ b/Easy Rider Bus Company/Special stops/task-info.yaml
@@ -13,5 +13,8 @@ files:
     visible: false
     learner_created: false
 feedback_link: https://hyperskill.org/projects/128/stages/683/implement#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Tue, 26 Nov 2024 12:11:38 UTC"
+record: 4
