--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -17,7 +17,7 @@ stages:
     is_completed: true
   - id: 683
     step: 10891
-    is_completed: false
+    is_completed: true
   - id: 684
     step: 10892
     is_completed: false
