--- a/Easy Rider Bus Company/Unlost in time/task-info.yaml
+++ b/Easy Rider Bus Company/Unlost in time/task-info.yaml
@@ -13,5 +13,8 @@ files:
     visible: false
     learner_created: false
 feedback_link: https://hyperskill.org/projects/128/stages/684/implement#comment
-status: Unchecked
-record: -1
+status: Failed
+feedback:
+  message: "Wrong answer in test #2"
+  time: "Tue, 26 Nov 2024 13:46:05 UTC"
+record: 5
