--- a/Easy Rider Bus Company/On-demand/task-info.yaml
+++ b/Easy Rider Bus Company/On-demand/task-info.yaml
@@ -13,5 +13,9 @@ files:
     visible: false
     learner_created: false
 feedback_link: https://hyperskill.org/projects/128/stages/685/implement#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">Hyperskill</a>
+    to continue learning.
+  time: "Tue, 26 Nov 2024 14:00:58 UTC"
+record: 6
