--- a/Easy Rider Bus Company/Unlost in time/task-info.yaml
+++ b/Easy Rider Bus Company/Unlost in time/task-info.yaml
@@ -13,8 +13,9 @@ files:
     visible: false
     learner_created: false
 feedback_link: https://hyperskill.org/projects/128/stages/684/implement#comment
-status: Failed
+status: Solved
 feedback:
-  message: "Wrong answer in test #2"
-  time: "Tue, 26 Nov 2024 13:46:05 UTC"
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">Hyperskill</a>
+    to continue learning.
+  time: "Tue, 26 Nov 2024 14:02:14 UTC"
 record: 5
